12 - Solving ionic-native bug with googlemaps on iOS

--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -6,3 +6,8 @@ page-map {
     height: 100%;
     width: 100%;
 }
+
+//trick to prevent ionic navigator nav-decor div to cause a black screen
+ion-app._gmaps_cdv_ .nav-decor{
+    display: none !important;
+}
